# bcra-debt-checker

./: .gitignore  pyproject.toml  tox.ini
app/domain/: entities.py  enums.py  value_objects.py
app/tests/: test_value_objects.py
