[project]
name = "bcra-debt-checker"
version = "0.1.0"
description = "Check debt status using BCRA Api"
authors = [
    {name = "Luciano Muñoz",email = "luchisds@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false