[project]
name = "bcra-debt-checker"
version = "0.1.0"
description = "Check debt status using BCRA Api"
authors = [
    {name = "Luciano Muñoz",email = "luchisds@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
bandit = "^1.8.6"
pytest = "^8.4.1"
coverage = "^7.10.5"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '\.html$'
skip-string-normalization = true

[tool.pylint.format]
max-line-length = "88"

[tool.pylint."MESSAGES CONTROL"]
  disable = [
      "C0114",  # Missing module docstring
      "C0115",  # Missing class docstring
  ]

[tool.bandit]
exclude_dirs = ["tests",]

[tool.isort]
profile = "black"